--- a/public/cache.manifest.template
+++ b/public/cache.manifest.template
@@ -5,8 +5,8 @@ about.html
 application.css
 application.js
 index.html
-images/logo_128.png
-images/logo_57.png
+images/notepad_128.png
+images/notepad_57.png
 images/startup.png
 styles/jquery-mobile/index.css
 styles/jquery-mobile/images/ajax-loader.gif
